updates-on-memtracker

--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -183,7 +183,7 @@ For details about Memory Tracker, see [Memory Tracker: Memory Management Practic
 
 | Name                 | Predefined value                   | Description                               |Whether supports runtime dynamic modifications|
 | :------------------- | :------------------------ | :------------------------------------------ |:------------------|
-|`memory_tracker_limit_ratio`    |`0.8`  | The value of this parameter can be set to `(0, 1]`, `2`, and `3`.<br/>`(0, 1]`: The percentage of available memory. Formula: `Percentage of available memory = Available memory / (Total memory - Reserved memory)`.<br/>When the expected memory required for a query exceeds the current available memory, {{nebula.name}} stops accepting queries. <br/> **Note**: For clusters with a mixed-used environment, the value of `memory_tracker_limit_ratio` should be set to a **lower** value. For example, when Graphd is expected to occupy only 50% of memory, the value can be set to less than `0.5`.<br/>`2`: Dynamic Self Adaptive mode. MemoryTracker dynamically adjusts the available memory based on the system's current available memory. <br/>**Note**: This feature is experimental. As memory usage cannot be monitored in real time in dynamic adaptive mode, an OOM error may still occur to handle large memory allocations. <br/>`3`: Disable MemoryTracker. MemoryTracker only logs memory usage and does not interfere with executions even if the limit is exceeded.| Yes|
+|`memory_tracker_limit_ratio`    |`0.8`  | The value of this parameter can be set to `(0, 1]`, `2`, and `3`.<br/>`(0, 1]`: The percentage of available memory. Formula: `Percentage of available memory = Available memory / (Total memory - Reserved memory)`.<br/>When an ongoing query results in memory usage exceeding the configured limit, the query fails and subsequently the memory is released. <br/> **Note**: For the hybrid deployment of a cluster with cloud-based and on-premises nodes, the value of `memory_tracker_limit_ratio` should be set to a **lower** value. For example, when the graphd is expected to occupy only 50% of memory, the value can be set to less than `0.5`.<br/>`2`: Dynamic Self Adaptive mode. MemoryTracker dynamically adjusts the available memory based on the system's current available memory. <br/>**Note**: This feature is experimental. As memory usage cannot be monitored in real time in dynamic adaptive mode, an OOM error may still occur to handle large memory allocations. <br/>`3`: Disable MemoryTracker. MemoryTracker only logs memory usage and does not interfere with executions even if the limit is exceeded.| Yes|
 |`memory_tracker_untracked_reserved_memory_mb`    |`50`| The reserved memory that is not tracked by the Memory Tracker. Unit: MB.| Yes|
 |`memory_tracker_detail_log`    |`false` | Whether to enable the Memory Tracker log. When the value is `true`, the Memory Tracker log is generated.| Yes|
 |`memory_tracker_detail_log_interval_ms`    |`60000`| The time interval for generating the Memory Tracker log. Unit: Millisecond. `memory_tracker_detail_log` is `true` when this parameter takes effect.| Yes|
