--- a/docs-2.0/nebula-explorer/workflow/1.prepare-resources.md
+++ b/docs-2.0/nebula-explorer/workflow/1.prepare-resources.md
@@ -34,7 +34,7 @@ You must prepare your environment for running a workflow, including NebulaGraph 
 
     Add the address of the NebulaGraph Analytics where the graph computing will be performed.
 
-    - Nebula Analytics Node IP address: fill in the new Analytics node IP address.
+    - Nebula Analytics Node IP address: fill in the new Analytics node IP address. If Analytics is a service with a single node and is on the same machine as the Dag Controller, set the IP address to `127.0.0.1`.
     - Username: The username used for password-free access to this Analytics node. The username must be consistent across all Analytics nodes.
     - SSH port number: Default is `22`.
     - SSH key path for passwordless auth: Used for SSH-free login between machines. Default is `~/.ssh/id_rsa`.
