--- a/docs-2.0/nebula-dashboard-ent/4.cluster-operator/7.data-synchronization.md
+++ b/docs-2.0/nebula-dashboard-ent/4.cluster-operator/7.data-synchronization.md
@@ -1,21 +1,59 @@
-# Data Synchronization
+# Data synchronization
 
 The **Data Synchronization** function of Dashboard Enterprise Edition is used to realize data synchronization between clusters.
 
-Click **Cluster Management** on the top navigation bar of Dashboard Enterprise Edition, click **Details** on the right side of the target cluster, and then click **Data Synchronization** on the left navigation bar to enter.
+## Precautions
+
+- Data synchronization is supported only in {{nebula.name}} Enterprise Edition 3.1.3 and later.
+- Clusters must be of the same version in order to synchronize data between each other.
+- Switching between primary and secondary clusters is not supported.
 
 !!! note
 
     For more information about the data synchronization function, see [Synchronize between two clusters](../../synchronization-and-migration/replication-between-clusters.md).
 
-## Prerequisites
+## Entry
 
-Complete the deployment of the current cluster Listener in **Service Configuration**, and restart the Meta Listener and Storage Listener.
+Click **Cluster Management** on the top navigation bar of Dashboard Enterprise Edition, click **Details** on the right side of the target cluster, and then click **Data Synchronization** on the left navigation bar to enter.
 
-## Steps
+## Preparation
 
-Click **Sync Space** on the page and follow the steps below:
+### Primary cluster
 
-1. Select Space: Check the graph space that needs to be synchronized in the primary cluster, and modify or use the default graph space name. Click **Next** after making your selections.
-2. Select Secondary Cluster: Select the data synchronization secondary cluster in the drop-down box, and click **Next**.
-3. Start the synchronization.
+1. Click **Service Configuration** at the top of the page.
+2. Select the nodes that contain the Meta services and click **Add Meta Listener**.
+3. Select the nodes that contain the Storage service, and click **Add Storage Listener**.
+
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_dash_synchronization_master_240108_en.png" width="600" alt="service configuration for the primary cluster">
+
+4. Click **OK** and confirm the information of all dependent services.
+
+### Secondary cluster
+
+1. Click **Service Configuration** at the top of the page.
+2. Select all nodes and click **Add Drainer**.
+
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_dash_synchronization_slave_240108_en.png" width="600" alt="service configuration for the secondary cluster">
+
+3. Click **OK** and confirm the information of all dependent services.
+
+## Create a data synchronization task
+
+1. Click **Sync Space** at the top of the page.
+2. Select the graph space in the primary cluster where you want to synchronize data. The name on the right is the name of the graph space to be synchronized in the secondary cluster, which can be modified. Click **Next** when the modification is complete.
+
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_dash_synchronization2_240108_en.png" width="300" alt="set the synchronization graph space">
+
+3. Select the secondary cluster for data synchronization in the drop-down box and click **Next**.
+4. Click **Start**.
+5. Confirm the creation result of the data synchronization task.
+
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_dash_synchronization3_240108_en.png" width="300" alt="set the synchronization graph space">
+
+## Other operations
+
+You can view synchronization information and stop or cancel synchronization.
+
+- View synchronization information: The data synchronization page displays the name of the synchronized graph space within this cluster, the associated secondary clusters, the name of the synchronized graph space in the secondary clusters, and the synchronization status.
+- Stop/Start synchronization: Pause/Restart the data synchronization.
+- Cancel synchronization: Delete the data synchronization task.
