Reorg prop reference content (#240)
* reorg-prop-reference-content

* Update 3.property-reference.md

* Update 3.property-reference.md

* Update 3.property-reference.md

* add en doc

* changes

* Update docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* commentfix

* Update 3.property-reference.md

---------

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
+++ b/docs-2.0-en/3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
@@ -1,62 +1,58 @@
-# Property reference
+# Reference to properties
 
-You can refer to the properties of a vertex or an edge in `WHERE` and `YIELD` syntax.
+nGQL provides property references to allow you to refer to the properties of the source vertex, the destination vertex, and the edge in the `GO` statement, and to refer to the output results of the statement in composite queries. This topic describes how to use these property references in nGQL.
 
 !!! note
 
      This function applies to native nGQL only.
 
-## Property reference for vertex
-
-### For source vertex
-
-```ngql
-$^.<tag_name>.<prop_name>
-```
+## Property references for vertexes
 
 | Parameter   | Description                                       |
 | :---------- | :-----------------                                |
-| `$^`        | is used to get the property of the source vertex. |
-| `tag_name`  | is the tag name of the vertex.                    |
-| `prop_name` | specifies the property name.                      |
+| `$^`        | Used to get the property of the source vertex. |
+| `$$`        | Used to get the property of the destination vertex. |
 
-### For destination vertex
-
-```ngql
-$$.<tag_name>.<prop_name>
-```
-
-| Parameter   | Description                                            |
-| :---------- | :-----------------                                     |
-| `$$`        | is used to get the property of the destination vertex. |
-| `tag_name`  | is the tag name of the vertex.                         |
-| `prop_name` | specifies the property name.                           |
-
-## Property reference for edge
-
-### For user-defined edge property
+### Property reference syntax
 
 ```ngql
-<edge_type>.<prop_name>
+$^.<tag_name>.<prop_name>  # Source vertex property reference
+$$.<tag_name>.<prop_name>   # Destination vertex property reference
 ```
 
-| Parameter   | Description                                   |
-| :---------- | :------------------                           |
-| `edge_type` | is the edge type of the edge.                 |
-| `prop_name` | specifies the property name of the edge type. |
+- `tag_name`: The tag name of the vertex.
+- `prop_name`: The property name within the tag.
 
-### For built-in properties
-
-Apart from the user-defined edge property, there are four built-in properties in each edge:
+## Property references for edges
 
 | Parameter   | Description                       |
 | :---------- | :------------------               |
-| `_src`      | source vertex ID of the edge      |
-| `_dst`      | destination vertex ID of the edge |
-| `_type`     | edge type                         |
-| `_rank`     | the rank value for the edge       |
+| `_src`      | The source vertex ID of the edge      |
+| `_dst`      | The destination vertex ID of the edge |
+| `_type`     | The internal encoding of edge types that uses sign to indicate direction. <br/>Positive numbers represent forward edges, while negative numbers represent backward edges.                        |
+| `_rank`     | The rank value for the edge       |
+
+### Property reference syntax
+
+nGQL allows you to reference edge properties, including user-defined edge properties and four built-in edge properties.
+
+```ngql
+<edge_type>.<prop_name>  # User-defined edge property reference
+<edge_type>._src|_dst|_type|_rank  # Built-in edge property reference
+```
+
+- `edge_type`: The edge type.
+- `prop_name`: The property name within the edge type.
+
+## Property references for composite queries
+
+| Parameter   | Description                       |
+| :---------- | :------------------               |
+| `$-`        | Used to get the output results of the statement before the pipe in the composite query. For more information, see [Pipe](4.pipe.md). |
 
 ## Examples
+
+### Use property references for vertexes
 
 The following query returns the `name` property of the `player` tag on the source vertex and the `age` property of the `player` tag on the destination vertex.
 
@@ -69,6 +65,19 @@ nebula> GO FROM "player100" OVER follow YIELD $^.player.name AS startName, $$.pl
 | "Tim Duncan" | 41     |
 +--------------+--------+
 ```
+
+!!! compatibility "Legacy version compatibility"
+
+    Starting from {{nebula.name}} 2.6.0, [Schema-related functions](../6.functions-and-expressions/4.schema.md) are supported. The preceding example can be rewritten as follows in {{nebula.name}} {{ nebula.release}} to produce the same results: 
+
+    ```ngql
+    GO FROM "player100" OVER follow YIELD properties($^).name AS startName, properties($$).age AS endAge;
+    ```
+
+    {{nebula.name}} {{ nebula.release}} is compatible with both new and old syntax.
+
+
+### Use property references for edges
 
 The following query returns the `degree` property of the edge type `follow`.
 
@@ -95,12 +104,36 @@ nebula> GO FROM "player100" OVER follow YIELD follow._src, follow._dst, follow._
 
 !!! compatibility "Legacy version compatibility"
 
-    NebulaGraph 2.6.0 and later versions support the new [Schema-related functions](../6.functions-and-expressions/4.schema.md). Similar statements as the above examples are written as follows in {{ nebula.release}}.
+    Starting from {{nebula.name}} 2.6.0, [Schema-related functions](../6.functions-and-expressions/4.schema.md) are supported. The preceding example can be rewritten as follows in {{nebula.name}} {{ nebula.release}} to produce the same results: 
 
     ```ngql
-    GO FROM "player100" OVER follow YIELD properties($^).name AS startName, properties($$).age AS endAge;
     GO FROM "player100" OVER follow YIELD properties(edge).degree;
     GO FROM "player100" OVER follow YIELD src(edge), dst(edge), type(edge), rank(edge);
     ```
 
-    In {{ nebula.release}}, NebulaGraph is still compatible with the old syntax.
+    {{nebula.name}} {{ nebula.release}} is compatible with both new and old syntax.
+
+
+### Use property references for composite queries
+
+
+The following composite query performs the following actions:
+
+1. Uses the property reference `$-.id` to get the results of the statement `GO FROM "player100" OVER follow YIELD dst(edge) AS id`, which returns the destination vertex ID of the `follow` edge type.
+2. Uses the `properties($^)` function to get the name property of the player tag on the source vertex of the `serve` edge type.
+3. Uses the `properties($$)` function to get the name property of the team tag on the destination vertex of the `serve` edge type.
+
+
+```ngql
+nebula> GO FROM "player100" OVER follow \
+        YIELD dst(edge) AS id | \
+        GO FROM $-.id OVER serve \
+        YIELD properties($^).name AS Player, properties($$).name AS Team;
++-----------------+-----------+
+| Player          | Team      |
++-----------------+-----------+
+| "Tony Parker"   | "Spurs"   |
+| "Tony Parker"   | "Hornets" |
+| "Manu Ginobili" | "Spurs"   |
++-----------------+-----------+
+```
