--- a/docs-2.0-zh/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0-zh/4.deployment-and-installation/1.resource-preparations.md
@@ -10,11 +10,11 @@
 
  {{nebula.name}} 是针对 NVMe SSD 进行设计和实现的，所有默认参数都是基于 SSD 设备进行调优，要求极高的 IOPS 和极低的 Latency。
 
-- 不建议使用 HDD；因为其 IOPS 性能差，随机寻道延迟高；会遇到大量问题。
+- 不建议使用 HDD；因为其 IOPS 性能差，随机寻道延迟高。
 
 - 不要使用远端存储设备（如 NAS 或 SAN），不要外接基于 HDFS 或者 Ceph 的虚拟硬盘。
 
-- 不要使用磁盘阵列（RAID）。
+- 不建议使用磁盘阵列（RAID）。
 
 - 使用本地 SSD 设备；或 AWS Provisioned IOPS SSD 或等价云产品。
 
