--- a/docs-2.0-zh/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0-zh/4.deployment-and-installation/1.resource-preparations.md
@@ -14,7 +14,7 @@
 
 - 不要使用远端存储设备（如 NAS 或 SAN），不要外接基于 HDFS 或者 Ceph 的虚拟硬盘。
 
-- 不建议使用磁盘阵列（RAID）。
+- 不建议使用磁盘阵列（RAID）做冗余存储。
 
 - 使用本地 SSD 设备；或 AWS Provisioned IOPS SSD 或等价云产品。
 
