--- a/docs-2.0-en/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0-en/4.deployment-and-installation/1.resource-preparations.md
@@ -10,7 +10,7 @@ NebulaGraph is designed and implemented for NVMe SSD. All default parameters are
 
 - Do not use remote storage devices, such as NAS or SAN. Do not connect an external virtual hard disk based on HDFS or Ceph.
 
-- Do not use RAID.
+- RAID is not recommended because {{nebula.name}} provides a multi-replica mechanism. Configuring RAID would result in a waste of resources.
 
 - Use local SSD devices, or AWS Provisioned IOPS SSD equivalence.
 
