--- a/docs-2.0-en/14.client/3.nebula-cpp-client.md
+++ b/docs-2.0-en/14.client/3.nebula-cpp-client.md
@@ -2,7 +2,7 @@
 
 [NebulaGraph CPP](https://github.com/vesoft-inc/nebula-cpp/tree/{{cpp.branch}}) is a C++ client for connecting to and managing the NebulaGraph database.
 
-## Limitations
+## Prerequisites
 
 You have installed C++ and GCC 4.8 or later versions.
 
@@ -102,6 +102,10 @@ Compile the CPP file to an executable file, then you can use it. The following s
   ```bash
   $ LIBRARY_PATH=/usr/local/nebula/lib64:$LIBRARY_PATH g++ -std=c++11 SessionExample.cpp -I/usr/local/nebula/include -lnebula_graph_client -o session_example
   ```
+
+## API reference
+
+Click [here](https://vesoft-inc.github.io/nebula-cpp/release-3.4/annotated.html) to check the classes and functions provided by the CPP Client.
 
 ## Core of the example code
 
