--- a/docs-2.0-zh/14.client/3.nebula-cpp-client.md
+++ b/docs-2.0-zh/14.client/3.nebula-cpp-client.md
@@ -2,7 +2,7 @@
 
 [NebulaGraph CPP](https://github.com/vesoft-inc/nebula-cpp/tree/{{cpp.branch}}) 是一款 C++ 语言的客户端，可以连接、管理 {{nebula.name}} 图数据库。
 
-## 使用限制
+## 前提条件
   
 请确保已安装 C++ 且 GCC 版本为 4.8 及以上。
 
@@ -102,6 +102,10 @@
   ```bash
   $ LIBRARY_PATH=/usr/local/nebula/lib64:$LIBRARY_PATH g++ -std=c++11 SessionExample.cpp -I/usr/local/nebula/include -lnebula_graph_client -o session_example
   ```
+
+## API reference
+
+点击[此处](https://vesoft-inc.github.io/nebula-cpp/release-3.4/annotated.html)查看 CPP 客户端提供的各种类和方法。
 
 ## 核心代码
 
