--- a/docs-2.0-zh/14.client/3.nebula-cpp-client.md
+++ b/docs-2.0-zh/14.client/3.nebula-cpp-client.md
@@ -103,7 +103,7 @@
   $ LIBRARY_PATH=/usr/local/nebula/lib64:$LIBRARY_PATH g++ -std=c++11 SessionExample.cpp -I/usr/local/nebula/include -lnebula_graph_client -o session_example
   ```
 
-## API reference
+## API 文档
 
 点击[此处](https://vesoft-inc.github.io/nebula-cpp/release-3.4/annotated.html)查看 CPP 客户端提供的各种类和方法。
 
