--- a/docs-2.0-zh/14.client/6.nebula-go-client.md
+++ b/docs-2.0-zh/14.client/6.nebula-go-client.md
@@ -34,9 +34,13 @@ $ go get -u -v github.com/vesoft-inc/nebula-go@<tag>
 
 `tag`：指定分支。例如`master`或`{{go.branch}}`。
 
+## API 文档
+
+点击[此处](https://pkg.go.dev/github.com/vesoft-inc/nebula-go/v3#section-documentation)查看 Go 客户端提供的各种方法和类型。
+
 ## 核心代码
 
-NebulaGraph GO 客户端提供 Connection Pool 和 Session Pool 两种使用方式，使用 Connection Pool 需要用户自行管理 Session 实例。
+NebulaGraph Go 客户端提供 Connection Pool 和 Session Pool 两种使用方式，使用 Connection Pool 需要用户自行管理 Session 实例。
 
 - Session Pool
 
