--- a/docs-2.0-zh/14.client/6.nebula-go-client.md
+++ b/docs-2.0-zh/14.client/6.nebula-go-client.md
@@ -36,7 +36,7 @@ $ go get -u -v github.com/vesoft-inc/nebula-go@<tag>
 
 ## API 文档
 
-点击[此处](https://pkg.go.dev/github.com/vesoft-inc/nebula-go/v3#section-documentation)查看 Go 客户端提供的各种方法和类型。
+点击[此处](https://pkg.go.dev/github.com/vesoft-inc/nebula-go/v3@v3.6.1#section-documentation)查看 Go 客户端提供的各种方法和类型。
 
 ## 核心代码
 
