--- a/docs-2.0-en/14.client/6.nebula-go-client.md
+++ b/docs-2.0-en/14.client/6.nebula-go-client.md
@@ -34,7 +34,7 @@ $ go get -u -v github.com/vesoft-inc/nebula-go/v3@v{{go.release}}
 
 ## API reference
 
-Click [here](https://pkg.go.dev/github.com/vesoft-inc/nebula-go/v3#section-documentation) to check the functions and types provided by the GO Client.
+Click [here](https://pkg.go.dev/github.com/vesoft-inc/nebula-go/v3@v3.6.1#section-documentation) to check the functions and types provided by the GO Client.
 
 ## Core of the example code
 
