add_api_for_go_client (#2437)
* add_api_for_go_client

* update

--- a/docs-2.0-en/14.client/6.nebula-go-client.md
+++ b/docs-2.0-en/14.client/6.nebula-go-client.md
@@ -32,6 +32,10 @@ Run the following command to install or update NebulaGraph Go:
 $ go get -u -v github.com/vesoft-inc/nebula-go/v3@v{{go.release}}
 ```
 
+## API reference
+
+Click [here](https://pkg.go.dev/github.com/vesoft-inc/nebula-go/v3@v3.6.1#section-documentation) to check the functions and types provided by the GO Client.
+
 ## Core of the example code
 
 The NebulaGraph GO client provides both Connection Pool and Session Pool, using Connection Pool requires the user to manage the session instances.
